k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: claims-processor
spec:
  selector:
    app: claims-processor
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30007
  type: NodePort
