k8s/app/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: claims-processor-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: anaira.local
    http:
      paths:
      - path: /process-claim
        pathType: Prefix
        backend:
          service:
            name: claims-processor
            port:
              number: 3000
